Add log directory and update Dockerfile structure
Added a new directory for logs and updated the Dockerfile to create necessary directories for FaunaDB.

Signed-off-by: StoppedwummPython <umber.secure@gmail.com>